--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <google-codelab-analytics gaid="UA-49880327-14"></google-codelab-analytics>
   <google-codelab codelab-gaid=""
-                  id="fullstack_login"
+                  id="codelab2_login"
                   title="GDG Lawrence Full Stack Community Application Authentication Codelab"
                   environment="web"
                   feedback-link="">
